# libflac

./: CMakeLists.txt  README.md
src/: flac.c  flac.h
